[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tenet-memory"
version = "0.1.0"
description = "Agent memory as a self-consistent belief state — bi-temporal supersession, time-travel, LLM-free reads"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anas", email = "anaselghoudane@gmail.com" }]
keywords = [
    "llm",
    "agent",
    "memory",
    "rag",
    "bi-temporal",
    "vector-search",
    "long-term-memory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.40",
    "numpy>=1.26",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
mcp = ["mcp>=1.23"]  # floor matches requirements.txt's CVE-clean minimum (raised 2026-07-12)
oss = ["oss2>=2.18"]
local = ["sentence-transformers>=3.0"]
cli = ["rich>=13"]
langgraph = ["langgraph>=0.2"]  # TenetStore(BaseStore) adapter, src/tenet/integrations/langgraph.py
all = ["tenet-memory[api,mcp,oss,local,cli,langgraph]"]

[project.urls]
Homepage = "https://github.com/Nas01010101/tenet"
Repository = "https://github.com/Nas01010101/tenet"
Issues = "https://github.com/Nas01010101/tenet/issues"

[project.scripts]
tenet = "tenet.cli:main"
tenet-agent = "tenet.agent:main"
tenet-mcp = "tenet.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tenet"]
